--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "predeploy": "yarn build && cp build/index.html build/404.html",
-        "deploy": "gh-pages -d build"
+        "predeploy" : "npm run build",
+        "deploy" : "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -41,5 +41,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^6.3.0"
     }
 }
